# farm-chain-chronicles

./: .gitignore  README.md  hardhat.config.cjs  main.py  package-lock.json  package.json  playwright.config.ts  requirements.txt  scoring_engine.py  tailwind.config.ts  test_scoring_engine.py
artifacts/@openzeppelin/contracts/token/ERC721/utils/ERC721Utils.sol/: ERC721Utils.dbg.json
artifacts/@openzeppelin/contracts/utils/Bytes.sol/: Bytes.dbg.json
artifacts/@openzeppelin/contracts/utils/introspection/ERC165.sol/: ERC165.dbg.json
artifacts/contracts/FarmChainRegistry.sol/: FarmChainRegistry.dbg.json  FarmChainRegistry.json
artifacts/contracts/ProduceBatch.sol/: ProduceBatch.json
cache/: solidity-files-cache.json
contracts/: FarmChainRegistry.sol  ProduceBatch.sol
playwright-report/: index.html
programs/farm_chain_dispute/: Cargo.toml
programs/farm_chain_dispute/src/: error.rs  instructions.rs  lib.rs  state.rs
scripts/: deploy.ts
src/: App.tsx  index.css
src/components/: CTASection.tsx  FreshnessSection.tsx  FundFarmersSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  JourneySection.tsx  Navbar.tsx  TraceabilityDemo.tsx  WalletButton.tsx  WalletProvider.tsx
src/config/: contracts.json
src/hooks/: use-ethereum.ts
src/lib/: solana.ts
src/pages/: Index.tsx
src/test/: CTASection.test.tsx  HeroSection.test.tsx  JourneySection.test.tsx  Navbar.test.tsx  WalletButton.test.tsx  setup.ts  solana.test.ts  utils.test.ts
test/: FarmChainRegistry.test.ts
