[package]
name = "farm_chain_dispute"
version = "0.1.0"
description = "FarmChain Automated Dispute & Reputation Ledger"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farm_chain_dispute"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"